<resources>
    <string name="app_name">movies</string>
    <string name="popular_title">Популярные</string>
    <string name="str_country"><![CDATA[<b>Страны</b>: %s]]></string>
    <string name="str_genres"><![CDATA[<b>Жанры:</b> %s]]></string>
    <string name="genre_and_data">%s (%s)</string>
    <string name="search_hint">Поиск</string>
    <string name="not_found">Не найдено</string>
    <string name="favorite">Избранное</string>
    <string name="replace">Повторить</string>
    <string name="error_network">Произошла ошибка при загрузке данных, проверьте подключение к сети</string>
</resources>