<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.search.SearchFragment">



    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"
        android:layout_marginTop="25dp"
        android:layout_marginStart="21dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />



    <EditText
        android:id="@+id/querySearchFilms"
        android:background="@drawable/custom_edit_text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:hint="@string/search_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/back"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintBottom_toBottomOf="@id/back"
        android:importantForAutofill="no"
        android:inputType="textCapWords" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_movies"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="21dp"
        android:paddingHorizontal="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/querySearchFilms"
        android:visibility="invisible"
        tools:listitem="@layout/item_rv_movies"/>



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/button_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:background="@drawable/selector_custom_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginHorizontal="19dp"
            android:layout_marginVertical="11dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/not_found"/>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>