<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        tools:context=".ui.details.DetailsFragment"
        android:layout_height="match_parent"
        android:layout_width="match_parent">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/img"
            android:contentDescription="@string/app_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            tools:src="@drawable/banner__1_" />


        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp"
            android:layout_marginStart="22dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/name"
            style="@style/CustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/description"
            app:layout_constraintTop_toBottomOf="@+id/img"
            tools:text="Изгой-один: Звёздные войны" />


        <TextView
            android:id="@+id/description"
            style="@style/CustomTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:alpha="0.6"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/country"
            app:layout_constraintTop_toBottomOf="@+id/name"
            tools:text="Сопротивление собирает отряд для выполнения особой миссии - надо выкрасть чертежи самого совершенного и мертоносного оружия Империи. Не всем суждено вернуться домой, но герои готовы к этому, ведь на кону судьба Галактики" />


        <TextView
            android:id="@+id/genre"
            style="@style/CustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:alpha="0.6"
            android:layout_marginTop="16dp"
            android:text="@string/str_genres"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/country"
            app:layout_constraintTop_toBottomOf="@+id/description" />


        <TextView
            android:id="@+id/country"
            style="@style/CustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginBottom="6dp"
            android:alpha="0.6"
            android:textSize="14sp"
            android:layout_marginVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            tools:text="@string/str_country" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

